--- a/docker/services/frontend/html/config-tcn.html
+++ b/docker/services/frontend/html/config-tcn.html
@@ -705,7 +705,7 @@
 
         <!-- Tabs -->
         <div class="tabs">
-            <button class="tab-btn active" onclick="showTab('overview')">&#128200; Ubersicht</button>
+            <button class="tab-btn active" onclick="showTab('overview')">&#128200; Übersicht</button>
             <button class="tab-btn" onclick="showTab('detection')">&#128269; Pattern-Erkennung</button>
             <button class="tab-btn" onclick="showTab('training')">&#9881; Training</button>
         </div>
@@ -890,7 +890,7 @@
                                 <th>Richtung</th>
                                 <th>Konfidenz</th>
                                 <th>Timeframe</th>
-                                <th>Erkannt</th>
+                                <th>Start</th>
                                 <th>Preis</th>
                                 <th style="text-align: center;">Chart</th>
                             </tr>
@@ -1875,20 +1875,27 @@
                     return;
                 }
 
+                // Sort by pattern_start_time (newest first)
+                const sortedPatterns = [...data.patterns].sort((a, b) => {
+                    const timeA = a.pattern_start_time || a.detected_at || '';
+                    const timeB = b.pattern_start_time || b.detected_at || '';
+                    return timeB.localeCompare(timeA);
+                });
+
                 // Store full pattern data for click handlers (includes start_time, end_time, pattern_points)
                 window.patternHistoryData = {};
-                data.patterns.forEach((p, idx) => {
+                sortedPatterns.forEach((p, idx) => {
                     window.patternHistoryData[`pattern_${idx}`] = p;
                 });
 
-                tbody.innerHTML = data.patterns.map((p, idx) => `
+                tbody.innerHTML = sortedPatterns.map((p, idx) => `
                     <tr class="clickable-row" onclick="showPatternChart('${p.symbol}', '${p.timeframe}', '${p.detected_at}', '${p.pattern_type}', '${p.direction}', window.patternHistoryData['pattern_${idx}'])">
                         <td style="font-weight: 500;">${p.symbol}</td>
                         <td><span class="pattern-badge ${p.direction}">${p.pattern_type.split('_').map(w => w.charAt(0).toUpperCase() + w.slice(1)).join(' ')}</span></td>
                         <td><span class="pattern-badge ${p.direction}">${p.direction}</span></td>
                         <td style="color: ${p.confidence >= 0.7 ? '#4caf50' : p.confidence >= 0.5 ? '#ffc107' : '#f44336'};">${(p.confidence * 100).toFixed(1)}%</td>
                         <td>${p.timeframe}</td>
-                        <td style="color: #888;">${formatLocalDateTime(p.detected_at)}</td>
+                        <td style="color: #888;">${formatLocalDateTime(p.pattern_start_time || p.detected_at)}</td>
                         <td style="font-family: monospace;">${p.price_at_detection ? p.price_at_detection.toLocaleString('de-CH', {maximumFractionDigits: 2}) : '-'}</td>
                         <td style="text-align: center;">
                             <button type="button" class="btn-chart" onclick="event.stopPropagation(); showPatternChart('${p.symbol}', '${p.timeframe}', '${p.detected_at}', '${p.pattern_type}', '${p.direction}', window.patternHistoryData['pattern_${idx}'])" title="Chart anzeigen">
